// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatView expect to render data 1`] = `
<DocumentFragment>
  DATA
</DocumentFragment>
`;

exports[`StatView expect to render error 1`] = `
<DocumentFragment>
  ERROR
</DocumentFragment>
`;

exports[`StatView expect to render loading 1`] = `
<DocumentFragment>
  LOADING
</DocumentFragment>
`;

exports[`StatViewWithError expect to render error page 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state pf-m-lg ins-c-error-state"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <svg
        aria-hidden="true"
        class="pf-c-empty-state__icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
      <h4
        class="pf-c-title pf-m-lg"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Something went wrong
      </h4>
      <div
        class="pf-c-empty-state__body"
      >
        <div
          class="pf-l-stack"
        >
          <div
            class="pf-l-stack__item"
          >
            There was a problem processing the request. Please try again.
          </div>
          <div
            class="pf-l-stack__item"
          >
            If the problem persists, contact 
            <a
              href="https://access.redhat.com/support"
            >
              Red Hat Support
            </a>
             or check our 
            <a
              href="https://status.redhat.com"
            >
               status page
            </a>
             for known outages.
          </div>
        </div>
      </div>
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        href="."
        rel="noopener noreferrer"
        target="_blank"
      >
        Go to home page
      </a>
    </div>
  </div>
</DocumentFragment>
`;
